added new files in navbar

--- a/please.html
+++ b/please.html
@@ -113,6 +113,7 @@
          <ul>
             <li><a href="please.html"> The main Quarters </a></li>
             <li><a href="mhr.html"> My honest reaction </a></li>
+            <li><a href="DiabeteAbitch.html"> DIABETESaBITCH </a></li> 
             <li><a href="credits.html"> Credits </a></li>
             <li><a href="https://github.com/parsaroidd" target="_blank">GitHub</a></li>
             <li><a href="ElaheV3.html"> Elahe the third version </a></li>
@@ -142,4 +143,5 @@
     </div>
     <footer> copy right by me !!!! </footer>
 </body>
+
 </html>
