--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- start deploying in 2026!!! -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,4 +25,5 @@
     <hr>
     <p> maybe say "please" to the browser it works for free and you never showed manor even once</p><h1>:(</h1>
 </body>
+
 </html>
