added the test in the navbar🌟

--- a/please.html
+++ b/please.html
@@ -112,7 +112,7 @@
         <!-- Under construction -->
          <ul>
             <li><a href="please.html"> The main Quarters </a></li>
-            <li><a href="mhr.html"> My honest reaction </a></li>
+            <li><a href="lemmeLiveParsa.html"> Will You live in my world? </a></li>
             <li><a href="DiabeteAbitch.html"> DIABETESaBITCH </a></li> 
             <li><a href="credits.html"> Credits </a></li>
             <li><a href="https://github.com/parsaroidd" target="_blank">GitHub</a></li>
@@ -145,3 +145,4 @@
 </body>
 
 </html>
+
