fixed a typo lol😭🙏

--- a/lemmeLiveParsa.html
+++ b/lemmeLiveParsa.html
@@ -132,7 +132,7 @@
              "ma mannn", "I can understand", "Why. just whyyyyy", "You generic little piece of android", 100, 20, -10, -30, "R", "M", "A", "L"] ,
             ["Which anime wifu?(One Piece)", "Robin", "Hancock", "Nami", "Shirahoshi", "cool", "yeah", "IM FUCKING DONE", "jo", 10, 30, -20, 0, "R", "H", "N", "S"],
             
-            ["Pick a name", "Kimiya", "Ava", "Elahe", "Star", "honorable name", "my #2 fav", "JackPot!", "dunno", 20, 50, 100, -20,  "Kimaiya", "Ava", "Elahe", "Star"],
+            ["Pick a name", "Kimiya", "Ava", "Elahe", "Star", "honorable name", "my #2 fav", "JackPot!", "dunno", 20, 50, 100, -20,  "Kimiya", "Ava", "Elahe", "Star"],
             ["Just click the button one more time"]
  
             ] 
@@ -274,3 +274,4 @@
     </body>
 </html>
     
+
