better header font color

--- a/lemmeLiveParsa.html
+++ b/lemmeLiveParsa.html
@@ -20,7 +20,7 @@
             background-color: pink; display: flex; flex-direction: row; width: 60%; margin: auto; padding: 3%; 
             border: 6px ridge #ff0066; margin-bottom: 10px;  
 	} #result { 
-		font-family: "Jacquard 12 Charted"; font-size: 1.5em; color: blueviolet; 
+		font-family: "Jacquard 12 Charted"; font-size: 1.5em; color: blue; 
 	} #result:hover {
 		font-family: "Coral Pixels"; color: #996633; 
 	} #next { 
@@ -274,4 +274,5 @@
     </body>
 </html>
     
+
 
