--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         if (girl == true) {
             let cc = window.confirm("two step verification: \n مطمئن باشم؟؟؟؟ ");
             if (cc == true) {
-                window.location.href = "please.html";
+                window.location.href = "html.html";
             } else {
                 document.getElementById("conf").textContent = "URL Not Found";
             }
@@ -27,3 +27,4 @@
 </body>
 
 </html>
+
